--- a/main.html
+++ b/main.html
@@ -4,9 +4,72 @@
 
 <head>
 	<link rel="stylesheet" href="styles.css">
+	<style>
+		        body {
+            margin: 0;
+            font-family: Arial, sans-serif;
+            background-color: #f5f5f5;
+        }
+
+        .header {
+            background-color: #011e29;
+            color: white;
+            text-align: center;
+            padding: 20px 0;
+        }
+
+        .latest-news-section {
+            background-color: #f5f5f5;
+            padding: 20px;
+            width: 80%;
+            margin: 20px auto;
+        }
+
+        .latest-news-section ul {
+            list-style-type: none;
+            padding: 0;
+        }
+
+        .latest-news-section li {
+            margin: 10px 0;
+            font-size: 18px;
+        }
+
+        .pictorial-news-section {
+            background-color: white;
+            padding: 20px;
+            width: 80%;
+            margin: 20px auto;
+            text-align: center;
+            border-radius: 10px;
+        }
+
+        .pictorial-news-section img {
+            max-width: 100%;
+            height: auto;
+            margin: 10px 0;
+        }
+	</style>
 </head>
 
 <body>
+	<header class="header">
+		<h1>Shaw's News</h1>
+	</header>
+	<div class="latest news section">
+		<h2>latest news Articles</h2>
+		<ul>
+			<li>Breaking News: Major Event Unfolds</li>
+            <li>Sports Update: Team Wins Championship</li>
+            <li>Technology: New Gadget Released</li>
+		</ul>
+	</div>
+	<div class="pictorial-news-section">
+        <h2>Main Articles</h2>
+        <img src="https://images.hindustantimes.com/img/2023/01/29/550x309/delhi_rains_1674974112847_1674981888135_1674981888135.jpeg" alt="News Image One">
+        <img src="https://images.hindustantimes.com/img/2023/01/29/550x309/ADANI-INDIA-GAUTAM-ADANI-0_1675011651023_1675011651023_1675011672003_1675011672003.JPG" alt="News Image Two">
+        <img src="https://images.hindustantimes.com/img/2023/01/29/550x309/FRANCE-REFORM-PENSIONS-31_1675022359706_1675022359706_1675022383851_1675022383851.JPG" alt="News Image Three">
+    </div>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
